sassi-macros/tests/lihaaf/compile_fail/jsahibon_bool_ordering.stderr
error[E0599]: the method `gt` exists for struct `JSahibONValueRef<Event, bool>`, but its trait bounds were not satisfied
   --> $DIR/jsahibon_bool_ordering.rs:15:10
    |
 11 |       let _ = Event::fields()
    |  _____________-
 12 | |         .payload
 13 | |         .jsahibon()
 14 | |         .value::<bool>()
 15 | |         .gt(true);
    | |         -^^ method cannot be called on `JSahibONValueRef<Event, bool>` due to unsatisfied trait bounds
    | |_________|
    |
    |
   ::: sassi/src/predicate/jsahibon.rs:498:1
    |
498 |   pub struct JSahibONValueRef<T, V> {
    |   --------------------------------- doesn't satisfy `JSahibONValueRef<Event, bool>: Iterator`
    |
    = note: the following trait bounds were not satisfied:
            `bool: JOrderedScalar`
            `JSahibONValueRef<Event, bool>: Iterator`
            which is required by `&mut JSahibONValueRef<Event, bool>: Iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
